src/test/ui/const-generics/issues/issue-72787.min.stderr
error: generic parameters may not be used in const operations
  --> $DIR/issue-72787.rs:11:17
   |
LL |     Condition<{ LHS <= RHS }>: True
   |                 ^^^ cannot perform const operation using `LHS`
   |
   = help: const parameters may only be used as standalone arguments, i.e. `LHS`

error: generic parameters may not be used in const operations
  --> $DIR/issue-72787.rs:11:24
   |
LL |     Condition<{ LHS <= RHS }>: True
   |                        ^^^ cannot perform const operation using `RHS`
   |
   = help: const parameters may only be used as standalone arguments, i.e. `RHS`

error: generic parameters may not be used in const operations
  --> $DIR/issue-72787.rs:26:25
   |
LL |     IsLessOrEqual<{ 8 - I }, { 8 - J }>: True,
   |                         ^ cannot perform const operation using `I`
   |
   = help: const parameters may only be used as standalone arguments, i.e. `I`

error: generic parameters may not be used in const operations
  --> $DIR/issue-72787.rs:26:36
   |
LL |     IsLessOrEqual<{ 8 - I }, { 8 - J }>: True,
   |                                    ^ cannot perform const operation using `J`
   |
   = help: const parameters may only be used as standalone arguments, i.e. `J`

error[E0283]: type annotations needed
  --> $DIR/issue-72787.rs:22:26
   |
LL | pub trait True {}
   | -------------- required by this bound in `True`
...
LL |     IsLessOrEqual<I, 8>: True,
   |                          ^^^^ cannot infer type for struct `IsLessOrEqual<I, 8_u32>`
   |
   = note: cannot satisfy `IsLessOrEqual<I, 8_u32>: True`

error[E0283]: type annotations needed
  --> $DIR/issue-72787.rs:22:26
   |
LL | pub trait True {}
   | -------------- required by this bound in `True`
...
LL |     IsLessOrEqual<I, 8>: True,
   |                          ^^^^ cannot infer type for struct `IsLessOrEqual<I, 8_u32>`
   |
   = note: cannot satisfy `IsLessOrEqual<I, 8_u32>: True`

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0283`.
